--- a/changelog
+++ b/changelog
@@ -4,11 +4,11 @@
 对agent通讯进行初步模块化
 添加
   main.js
-  ./base/communication.js 
-  ./base/variable.js
-  ./business/controlChannel.js
-  ./business/dataChannel.js
-  ./business/file.js
-  ./business/handler.js
+  agent/base/communication.js 
+  agent/base/variable.js
+  agent/business/controlChannel.js
+  agent/business/dataChannel.js
+  agent/business/file.js
+  agent/business/handler.js
 
 //////////////////////////////////
